# InsureRAG

./: .gitignore  README.md  pyproject.toml
data/raw/internal/: internal_customer_information_policy.md  internal_product_approval_checklist.md
data/raw/official/vvg/: vvg_en.html
data/raw/official/vvg_infov/: vvg_infov_en.html
scripts/: debug_ingest_official_html_sample.py  debug_parse_bafin_sections.py  ingest.py  ingest_internal_md.py
src/insurerag/: __init__.py  config.py
src/insurerag/ingestion/: chunkers.py  download_sources.py  loaders.py  metadata.py  sources.py  writers.py
src/insurerag/ingestion/loaders/: __init__.py  html_loader.py  html_loader_old.py  markdown_loader.py  registry.py  utils.py
src/insurerag/schemas/: __init__.py  chunk.py  document.py
