[project]
name = "insurerag"
version = "0.1.0"
description = "Internal Insurance Compliance RAG Assistant for EU/German insurance regulations and simulated internal policies"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]